corrected the code

--- a/lab1/pages/about.html
+++ b/lab1/pages/about.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
     <title>Page for Team 19</title>
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>Team 19</h1>
     <div id="pages">
         <hr>
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="about.html"><strong>About</strong></a>
         <a href="contact.html">Contact</a>
         <hr>
@@ -42,11 +43,11 @@
         <li>Reading Manga</li>
         <li>Playing Video Games</li>
     </ul>
+    <hr>
+    <footer>
+        <img src="../images/Logo3.jpg" width="50" height="50" alt="CSUMB Logo">
+        <p>CST336 Internet Programming. 2026© WAFA SOLIAN STEWMAN TRAISSAC<br><strong>Disclaimer :</strong>This page is for academic purposes and purely fictional
+        </p>
+    </footer>
 </body>
-<hr>
-<footer>
-    <img src="../images/Logo3.jpg" width="50" height="50" alt="CSUMB Logo">
-    <p>CST336 Internet Programming. 2026© WAFA SOLIAN STEWMAN TRAISSAC<br><strong>Disclaimer :</strong>This page is for academic purposes and purely fictional
-    </p>
-</footer>
 </html>
