--- a/lab1/pages/contact.html
+++ b/lab1/pages/contact.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
     <title>Page for Team 19</title>
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>Team 19</h1>
     <div id="pages">
         <hr>
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="contact.html"><strong>Contact</strong></a>
         <hr>
     </div>
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSckL2G4QlXkVGZbXwRnstczBf61IGsT6E57k0UesddMQEMvig/viewform?embedded=true" width="640" height="876" frameborder="0" marginheight="0" marginwidth="0">Chargement…</iframe>
+    <hr>
+    <footer>
+        <img src="../images/Logo3.jpg" width="50" height="50" alt="CSUMB Logo">
+        <p>CST336 Internet Programming. 2026© WAFA SOLIAN STEWMAN TRAISSAC<br><strong>Disclaimer :</strong>This page is for academic purposes and purely fictional
+        </p>
+    </footer>
 </body>
-<hr>
-<footer>
-    <img src="../images/Logo3.jpg" width="50" height="50" alt="CSUMB Logo">
-    <p>CST336 Internet Programming. 2026© WAFA SOLIAN STEWMAN TRAISSAC<br><strong>Disclaimer :</strong>This page is for academic purposes and purely fictional
-    </p>
-</footer>
 </html>
