changing h6 into h4 and adding alt attribute on images missing one

--- a/HW1/pages/types.html
+++ b/HW1/pages/types.html
@@ -40,10 +40,10 @@
                 <p class="text-next-to-image">
                     Windows: very widespread on PCs, used by both individuals and businesses
                 </p>
-                <img class="image-next-to-text" src="../ressources/images/windows.png">
+                <img class="image-next-to-text" src="../ressources/images/windows.png" alt="windows">
             </div>
             <div class="image-on-left">
-                <img class="image-next-to-text" src="../ressources/images/macos.png">
+                <img class="image-next-to-text" src="../ressources/images/macos.png" alt="macos">
                 <p class="text-next-to-image">
                     macOS: operating system of Apple computers, optimized for their hardware
                 </p>
@@ -52,7 +52,7 @@
                 <p class="text-next-to-image">
                     Linux: open source system, very flexible, used on PCs, servers and embedded systems
                 </p>
-                <img class="image-next-to-text" src="../ressources/images/linux.jpg">
+                <img class="image-next-to-text" src="../ressources/images/linux.jpg" alt="linux">
             </div>
         </div>
         <div class="content-block" id="mobile-os">
@@ -62,7 +62,7 @@
                 They are designed for tactile use, strict energy management and mobile applications.
             </p>
             <div class="image-on-left">
-                <img class="image-next-to-text" src="../ressources/images/android.png">
+                <img class="image-next-to-text" src="../ressources/images/android.png" alt="android">
                 <p class="text-next-to-image">
                     Android: majority open source system on smartphones
                 </p>
@@ -71,7 +71,7 @@
                 <p class="text-next-to-image">
                     iOS: system used on iPhones, focused on security and the Apple ecosystem
                 </p>
-                <img class="image-next-to-text" src="../ressources/images/ios.png">
+                <img class="image-next-to-text" src="../ressources/images/ios.png" alt="ios">
             </div>
         </div>
         <div class="content-block" id="rtos">
